<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activity.PatientRegisterActivity"
    android:focusable="false"
    android:focusableInTouchMode="true">

    <View
        android:id="@+id/topView1"
        android:layout_width="0dp"
        android:layout_height="@dimen/_50sdp"
        android:background="@color/twitter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <View
        android:id="@+id/view51"
        android:layout_width="0dp"
        android:layout_height="@dimen/_25sdp"
        android:background="@drawable/wave1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topView1" />


    <TextView
        android:id="@+id/topText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_26sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:text="@string/patient_session"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_18sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtPatientName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_28sdp"
        android:layout_marginEnd="@dimen/_28sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="@dimen/_12sdp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:padding="@dimen/_10sdp"
        android:lines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view51"
        android:imeOptions="actionDone"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtPatientAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_28sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_28sdp"
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/ic_address"
        android:drawablePadding="@dimen/_12sdp"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="text"
        android:padding="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:lines="1"
        app:layout_constraintTop_toBottomOf="@+id/edtPatientName"
        android:imeOptions="actionDone"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtPatientEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_28sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_28sdp"
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="@dimen/_12sdp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:lines="1"
        app:layout_constraintTop_toBottomOf="@+id/edtPatientAddress"
        android:imeOptions="actionDone"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtPatientMobile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_28sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_28sdp"
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/ic_mobile"
        android:drawablePadding="@dimen/_12sdp"
        android:ems="10"
        android:hint="@string/mobile"
        android:inputType="phone"
        android:padding="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:lines="1"
        app:layout_constraintTop_toBottomOf="@+id/edtPatientEmail"
        android:imeOptions="actionDone"/>

    <TextView
        android:id="@+id/txtAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_38sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="Select Your Age"
        android:textColor="@color/facebook"
        android:textSize="@dimen/_10sdp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:lines="1"
        app:layout_constraintTop_toBottomOf="@+id/edtPatientMobile"
        android:imeOptions="actionDone"/>

    <com.jaredrummler.materialspinner.MaterialSpinner
        android:id="@+id/spinnerPatientAge"
        android:layout_width="@dimen/_230sdp"
        android:layout_height="wrap_content"
        app:ms_dropdown_height="wrap_content"
        android:hint="Select Age"
        android:textAlignment="viewStart"
        android:padding="@dimen/_10sdp"
        android:ems="10"
        android:layout_marginStart="@dimen/_28sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_28sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:lines="1"
        android:background="@drawable/spinner_bg"
        app:layout_constraintTop_toBottomOf="@+id/txtAge"
        android:imeOptions="actionDone"/>

    <TextView
        android:id="@+id/txtGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_38sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="Select Your Gender"
        android:textColor="@color/facebook"
        android:textSize="@dimen/_10sdp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:lines="1"
        app:layout_constraintTop_toBottomOf="@+id/spinnerPatientAge" />


    <com.jaredrummler.materialspinner.MaterialSpinner
        android:id="@+id/spinnerPatientGender"
        android:layout_width="@dimen/_230sdp"
        android:layout_height="wrap_content"
        app:ms_dropdown_height="wrap_content"
        android:hint="Select Gender"
        android:textAlignment="viewStart"
        android:padding="@dimen/_10sdp"
        android:ems="10"
        android:layout_marginStart="@dimen/_28sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_28sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:lines="1"
        android:background="@drawable/spinner_bg"
        app:layout_constraintTop_toBottomOf="@+id/txtGender"
        android:imeOptions="actionDone"/>

    <TextView
        android:id="@+id/txtBlood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_38sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="Select Your Blood Group"
        android:textColor="@color/facebook"
        android:textSize="@dimen/_10sdp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:lines="1"
        app:layout_constraintTop_toBottomOf="@+id/spinnerPatientGender" />

    <com.jaredrummler.materialspinner.MaterialSpinner
        android:id="@+id/spinnerPatientBlood"
        android:layout_width="@dimen/_230sdp"
        android:layout_height="wrap_content"
        app:ms_dropdown_height="wrap_content"
        android:hint="Select Blood Group"
        android:textAlignment="viewStart"
        android:padding="@dimen/_10sdp"
        android:ems="10"
        android:layout_marginStart="@dimen/_28sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_28sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:lines="1"
        android:background="@drawable/spinner_bg"
        app:layout_constraintTop_toBottomOf="@+id/txtBlood"
        android:imeOptions="actionDone"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtPatientPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_28sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_28sdp"
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="@dimen/_12sdp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:lines="1"
        app:layout_constraintTop_toBottomOf="@+id/spinnerPatientBlood"
        android:imeOptions="actionDone"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtPatientConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_28sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_28sdp"
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="@dimen/_12sdp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:lines="1"
        app:layout_constraintTop_toBottomOf="@+id/edtPatientPassword"
        android:imeOptions="actionDone"/>


    <Button
        android:id="@+id/buttonPatientRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:padding="@dimen/_10sdp"
        android:background="@drawable/round_bg"
        android:text="@string/signup"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPatientConfirmPassword" />


    <TextView
        android:id="@+id/loginHintPatientText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/yes_account"
        android:textColor="@color/facebook"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPatientRegister"
        android:layout_marginBottom="@dimen/_20sdp"/>


    <TextView
        android:id="@+id/loginPatientText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_3sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/signin_as"
        android:textColor="@color/isolation"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/loginHintPatientText"
        app:layout_constraintTop_toBottomOf="@+id/buttonPatientRegister"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_20sdp"/>

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>