...
        android:background="@drawable/spinner_bg"
        app:layout_constraintTop_toBottomOf="@+id/txtUserType"
        android:imeOptions="actionDone"/>


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtLoginEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_28sdp"
        android:layout_marginEnd="@dimen/_28sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/round_border"
...
